[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="VBoxContainer" type="VBoxContainer"]
margin_left = 2.58472
margin_top = 399.338
margin_right = 102.585
margin_bottom = 599.338
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 100.0
margin_bottom = 14.0
text = "Attacks:"

[node name="Label2" type="Label" parent="."]
margin_top = 18.0
margin_right = 100.0
margin_bottom = 32.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Beam"
[connection signal="gui_input" from="Label2" to="." method="_on_Label2_gui_input"]
[connection signal="mouse_entered" from="Label2" to="." method="_on_Label2_mouse_entered"]
[connection signal="mouse_exited" from="Label2" to="." method="_on_Label2_mouse_exited"]
